welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:30: error: expected class or object definition
def solution(){
^FlowerCase:46: error: Unmatched closing brace '}' ignored here
}
^